--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^4.10.0
   fluttertoast: ^8.2.2
   http: ^1.1.0
+  webview_flutter: ^4.3.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
