--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   fluttertoast: ^8.2.2
   http: ^1.1.0
   webview_flutter: ^4.3.0
+  flutter_inappwebview: ^5.7.2+3
 dev_dependencies:
   flutter_test:
     sdk: flutter
